<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zhao.edifier.com.mynotepaper.MessageActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/register_title"
       />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone_input"
        android:layout_width="match_parent"
        android:hint="@string/register_phone"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        >

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/tv_getMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorAccent"
        android:text="@string/register_obtain_message"
        android:layout_below="@id/til_phone_input"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_message_input"
        android:layout_width="match_parent"
        android:hint="@string/register_message"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_getMessage"
        >

        <EditText
            android:id="@+id/et_message_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
